# clv-bot

./: Cargo.toml  Untitled.ipynb
src/: lib.rs  main.rs  odds_api_client.rs
src/odds_api_client/: ncaab_totals.rs
