[package]
name = "clv_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = {version = "0.11.22", features = ["json", "default-tls"]}
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }

